objects/copado__JobExecution__c.object
<CustomObject>
    <fields>
        <fullName>copado__Callback__c</fullName>
        <description>An apex class that must implement copado.JobExecutionCallback interface.</description>
        <inlineHelpText>An apex class that must implement copado.JobExecutionCallback interface.</inlineHelpText>
        <label>Callback</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Commit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commit</label>
        <referenceTo>copado__Git_Commit__c</referenceTo>
        <relationshipLabel>Job Executions</relationshipLabel>
        <relationshipName>Job_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__DataJson__c</fullName>
        <label>DataJson</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>Job Executions</relationshipLabel>
        <relationshipName>JobExecutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Destination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Job Executions (Destination)</relationshipLabel>
        <relationshipName>Job_Executions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__ParentId__c</fullName>
        <formula>IF(NOT(ISBLANK( copado__Deployment__c )), copado__Deployment__c, 
    IF(NOT(ISBLANK( copado__Promotion__c )), copado__Promotion__c, 
        IF(NOT(ISBLANK( copado__Commit__c )), copado__Commit__c, 
            IF(NOT(ISBLANK( copado__Snapshot__c )), copado__Snapshot__c, null)
        )
    )
)</formula>
        <label>Parent Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>copado__Promotion__c</referenceTo>
        <relationshipLabel>Job Executions</relationshipLabel>
        <relationshipName>JobExecutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Snapshot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Snapshot</label>
        <referenceTo>copado__Git_Backup__c</referenceTo>
        <relationshipLabel>Job Executions</relationshipLabel>
        <relationshipName>Job_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Job Executions</relationshipLabel>
        <relationshipName>Job_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Template</label>
        <referenceTo>copado__JobTemplate__c</referenceTo>
        <relationshipLabel>Job Executions</relationshipLabel>
        <relationshipName>JobExecutions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__VolumeOptions__c</fullName>
        <label>VolumeOptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Job Execution</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Template__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Source__c</columns>
        <columns>copado__Destination__c</columns>
        <columns>copado__ErrorMessage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JE-{000}</displayFormat>
        <label>Job Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>